force-app/main/default/objects/File_Processing__c/File_Processing__c.object-meta.xml
<CustomObject>
    <description>This is used by business analysis to track file processing.</description>
    <label>File Processing</label>
    <nameField>
        <label>File Processing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>