force-app/main/default/objects/File_Processing__c/fields/Client_Account_del__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>File Processing</relationshipLabel>
    <relationshipName>File_Processing_del</relationshipName>
    <type>Lookup</type>
</CustomField>