force-app/main/default/objects/File_Processing__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>This is the source of the file received.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ACS-Perkins</fullName>
            </value>
            <value>
                <fullName>AES/PHEAA</fullName>
            </value>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>Campus Partners</fullName>
            </value>
            <value>
                <fullName>Cornerstone (UT)</fullName>
            </value>
            <value>
                <fullName>COSTEP</fullName>
            </value>
            <value>
                <fullName>DELQ</fullName>
            </value>
            <value>
                <fullName>Demographic File</fullName>
            </value>
            <value>
                <fullName>DER</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
            <value>
                <fullName>EdFinancial</fullName>
            </value>
            <value>
                <fullName>EDGEucation Loans.</fullName>
            </value>
            <value>
                <fullName>EdManage (SC)</fullName>
            </value>
            <value>
                <fullName>Granite State (NH)</fullName>
            </value>
            <value>
                <fullName>Great Lakes Higher Education</fullName>
            </value>
            <value>
                <fullName>KHESLC (KY)</fullName>
            </value>
            <value>
                <fullName>MOHELA (MO)</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>OSLA (OK)</fullName>
            </value>
            <value>
                <fullName>Sallie Mae</fullName>
            </value>
            <value>
                <fullName>UAS</fullName>
            </value>
            <value>
                <fullName>VSAC (VT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>