force-app/main/default/objects/File_Processing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This is the status of the file.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>CM Approved</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>