force-app/main/default/objects/File_Processing__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>This is the date the file is in the selected status.</description>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>