force-app/main/default/objects/File_Processing__c/recordTypes/File_Processing.recordType-meta.xml
<RecordType>
    <fullName>File_Processing</fullName>
    <active>true</active>
    <label>File Processing</label>
</RecordType>